[package]
name = "aliasable"
version = "0.1.3"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Basic aliasable (non unique pointer) types"
categories = ["no-std", "data-structures"]
documentation = "https://docs.rs/aliasable"
homepage = "https://github.com/avitex/rust-aliasable"
repository = "https://github.com/avitex/rust-aliasable"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE", "Cargo.toml"]

[features]
default = ["alloc"]
alloc = []
traits = ["stable_deref_trait", "aliasable_deref_trait"]

[dependencies]
stable_deref_trait = { version = "1.2", optional = true }
aliasable_deref_trait = { version = "0.2", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
